@@ -179,8 +179,12 @@ class Api():
             time_struct = time.strptime(time_str, '%Y-%m-%dT%H:%M:%S')
             self._token_expire = datetime(*time_struct[0:6], tzinfo=timezone.utc)
         self._user_token = tokens[0]['value']
-        self._user_name = tokens[0].get('name', 'anonymous')
         self._profile_token = tokens[1]['value']
+        if self.user:
+            tokens[0]['name'] = self.get_profile()['name']
+        else:
+            tokens[0]['name'] = 'anonymous'
+        self._user_name = tokens[0]['name']
 
     def request_tokens(self):
         self._user_token = None
@@ -193,12 +197,9 @@ class Api():
                 return err
             tokens = [self.refresh_token(t) for t in tokens_pure]
             self.read_tokens(tokens)
-            tokens[0]['name'] = self.get_profile()['name']
         else:
             tokens = anonymous_tokens()
             self.read_tokens(tokens)
-            tokens[0]['name'] = 'anonymous'
-        self._user_name = tokens[0]['name']
         with self.token_file.open('wb') as fh:
             pickle.dump(tokens, fh)
         return None
@@ -243,9 +244,9 @@ class Api():
                 if err:
                     raise ApiException(f'Login failed with: "{err}"')
             else:
+                self.read_tokens(tokens)
                 with self.token_file.open('wb') as fh:
                     pickle.dump(tokens, fh)
-                self.read_tokens(tokens)
 
     def user_token(self):
         self.refresh_tokens()
@@ -343,7 +344,7 @@ class Api():
         items = self._request_get(url, params=data, headers=headers, use_cache=use_cache)['items']
         watched = self.get_profile()['watched']
         for item in items:
-            item['ResumeTime'] = float(watched[str(item['id'])]['position'])
+            item['ResumeTime'] = float(watched.get(str(item['id']), {'position':0.0})['position'])
         return items
 
     def get_profile(self, use_cache=False):
