@@ -1,3 +1,7 @@
+[B]Version 6.3.1 - 2024-03-05[/B]
+- fix refresh token bug
+- fix watchlist missing resume time bug
+
 [B]Version 6.3.0 - 2024-02-25[/B]
 - Added login
 - changed videoinfo to nexus api
